--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,5 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+    <h1>Page d'accueil</h1>
+    <p>
+      Ceci est la page d'accueil de mon site web
+      <a href="http://michelbooh.fr/">Site personnel</a>.
+    </p>
