amelioration test fichier

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Premier app tuto ruby on rails | <%= @titre %></title>
+    <title><%= full_title(@titre) %></title>
     <%= csrf_meta_tag %>
   </head>
   <body>
