--- a/app/assets/javascripts/Templates/myModalRegistration.html
+++ b/app/assets/javascripts/Templates/myModalRegistration.html
@@ -10,10 +10,10 @@
 -->
 
 <div class="modal-body" id="modal-body">
-
+  <form name="outerForm" class="tab-form-demo">
     <uib-tabset active="activeJustified" justified="true">
         <uib-tab index="1" heading="Sign In">
-          <form ng-submit="signIn()" novalidate>
+          </br>
             <div class="form-group">
               <label for="exampleInputEmail1">Email address</label>
               <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" ng-model="credentials.email">
@@ -23,44 +23,101 @@
               <label for="exampleInputPassword1">Password</label>
               <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" ng-model="credentials.password">
             </div>
-          </form> 
+            <button class="btn btn-lg btn-primary btn-block" ng-click="signIn()">Sign In</button>
         </uib-tab>
         <uib-tab index="2" heading="Sign Up">
-          <form ng-submit="signUp()" novalidate>
-            <div class="modal-body">
+          </br>
+            <h3>Apply as a <strong>{{data.userSelect.name}}</strong></h3>
+            <!-- USER TYPE -->
+            <div class="input-group mb-3">
+              <div class="input-group-prepend">
+                <label class="input-group-text" for="userSelect">Choose type user</label>
+              </div>
+              <select class="userSelect" id="userSelect" ng-model="data.userSelect" ng-options="usertype.name for usertype in usertypes">
+                <option value="">---Please select---</option>
+              </select>
+            </div>
+            </br>
+            <div ng-switch="data.userSelect.name">
+              <!-- BLOC SELLER -->
+              <div class="form-group" ng-switch-when="seller">
+                <!-- USER MOBILITE -->
+                <div class="input-group mb-3">
+                  <div class="input-group-prepend">
+                    <label class="input-group-text" for="userSelect">Choose type of mobility</label>
+                  </div>
+                  <select class="userSelect" id="userSelect" ng-model="myMobility" ng-options="usermobility.name for usermobility in usermobilities">
+                    <option value="">---Please select---</option>
+                  </select>
+                </div>
+                </br>
+
+                <div ng-switch="myMobility.name">
+                  <!-- NAME -->
+                  <div class="form-group">
+                      <label>Name</label>
+                      <input type="text" name="name" class="form-control" ng-model="data.name" required>
+                      <p ng-show="form.userForm.name.$invalid && !form.userForm.name.$pristine" class="help-block">Your name is required.</p>
+                  </div>
+                  <!-- EMAIL -->
+                  <div class="form-group">
+                      <label>Email</label>
+                      <input type="email" name="email" class="form-control" ng-model="data.email" required>
+                      <p ng-show="form.userForm.email.$invalid && !form.userForm.email.$pristine" class="help-block">Enter a valid email.</p>
+                  </div>
+                  <div class="form-group" ng-switch-when="sedentary">
+                    <div class="alert alert-info" role="alert">
+                      Please enter the address of your shop After!
+                    </div>
+                  </div>
+                  <div class="form-group" ng-switch-when="itinerant">
+                    <div class="alert alert-warning" role="alert">
+                      Traveling salesman, You dont have a store address to enter!
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- BLOC BUYER -->
+              <div class="form-group" ng-switch-when="buyer">
                 <!-- NAME -->
                 <div class="form-group">
                     <label>Name</label>
-                    <input type="text" name="name" class="form-control" ng-model="name" required>
-                    <p ng-show="form.userForm.name.$invalid && !form.userForm.name.$pristine" class="help-block">You name is required.</p>
+                    <input type="text" name="name" class="form-control" ng-model="data.name" required>
+                    <p ng-show="form.userForm.name.$invalid && !form.userForm.name.$pristine" class="help-block">Your name is required.</p>
                 </div>
-                <!-- USERNAME -->
+                <!-- USERNAME 
                 <div class="form-group">
                     <label>Username</label>
-                    <input type="text" name="username" class="form-control" ng-model="user.username" ng-minlength="3" ng-maxlength="8" required>
+                    <input type="text" name="username" class="form-control" ng-model="credentials.username" ng-minlength="3" ng-maxlength="8" required>
                     <p ng-show="form.userForm.username.$error.minlength" class="help-block">Username is too short.</p>
                     <p ng-show="form.userForm.username.$error.maxlength" class="help-block">Username is too long.</p>
-                </div>
+                </div> 
+                -->
                 <!-- EMAIL -->
                 <div class="form-group">
                     <label>Email</label>
-                    <input type="email" name="email" class="form-control" ng-model="email" required>
+                    <input type="email" name="email" class="form-control" ng-model="data.email" required>
                     <p ng-show="form.userForm.email.$invalid && !form.userForm.email.$pristine" class="help-block">Enter a valid email.</p>
                 </div>
+              </div>
             </div>
-          </form>
+
+            </br>
+
+            <button class="btn btn-lg btn-primary btn-block" ng-click="signUp(data)">Sign Up</button>
         </uib-tab>
     </uib-tabset>
-
+  </form>
 </div>
 
 <!--    
     <div class="form-group">
       <input type="checkbox" checked data-toggle="toggle" data-on="Buyer" data-off="Seller" data-onstyle="success" data-offstyle="info">
     </div>
--->
+
 
 <div class="modal-footer">
   <button type="button" class="btn btn-warning" ng-click="cancel()">Cancel</button>
-  <button type="submit" class="btn primary-btn">Submit</button>
+  <button type="submit" class="btn primary-btn" ng-click="submit(credentials)">Submit</button>
 </div>
+-->
