--- a/app/assets/javascripts/Templates/myModalProduct.html
+++ b/app/assets/javascripts/Templates/myModalProduct.html
@@ -6,7 +6,7 @@
     <uib-tabset active="active">
       <uib-tab index="0" heading="Produit">
         <br/>
-        <table class="table">
+        <table class="table" ng-if="nbproduit > 0">
             <thead>
                 <tr>
                     <th scope="col">Produit</th>
